--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ ul {
 }
 .navigation .link {
   letter-spacing: 0.02em;
+  font-weight: 500;
   text-decoration: none;
   color: var(--color-primary-dark);
   padding: 24px 0;
@@ -176,28 +177,30 @@ ul {
 .page-waw-doing {
   margin-bottom: 72px;
   padding-top: 0;
-  justify-content: center;
+  text-align: center;
   letter-spacing: 0.02em;
   font-size: 36px;
   line-height: 1.11;
   color: var(--color-primary-dark);
-  display: flex;
 }
 .section-background {
   background: var(--clr-background-dark);
 }
 .team {
   margin-bottom: 72px;
-  justify-content: center;
+  text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   color: var(--color-primary-dark);
-  display: flex;
 }
 .team-conteiner {
   display: flex;
   gap: 24px;
+}
+.our-team {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .team-item {
@@ -209,11 +212,9 @@ ul {
   border-radius: 0px 0px 4px 4px;
   width: 264px;
 }
-.foto-team {
-  padding-bottom: 32px;
-}
+
 .piple {
-  padding-bottom: 8px;
+  margin-bottom: 8px;
   text-align: center;
   letter-spacing: 0.02em;
   font-weight: 500;
@@ -224,7 +225,6 @@ ul {
 
 /* paragraf  */
 .paragraf {
-  padding-bottom: 32px;
   text-align: center;
   letter-spacing: 0.02em;
   font-size: 16px;
@@ -398,9 +398,7 @@ ul {
   padding-top: 32px;
 }
 /* text  */
-.section-foto {
-  padding-bottom: 120px;
-}
+
 .service-conteiner {
   display: flex;
   flex-wrap: wrap;
@@ -414,71 +412,15 @@ ul {
   max-width: 100%;
   height: auto;
 }
-.text-name-ban {
+.text-name {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--color-primary-dark);
 }
-.text-name-cash {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--color-primary-dark);
-}
-.text-name-app {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--color-primary-dark);
-}
-.text-name-taxi {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--color-primary-dark);
-}
-.text-name-screen {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--color-primary-dark);
-}
-.text-name-online {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--color-primary-dark);
-}
-.text-name-inst {
-  font-weight: 500;
 
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--color-primary-dark);
-}
-.text-name-organic {
-  font-weight: 500;
-
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--color-primary-dark);
-}
-.text-name-fresh {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--color-primary-dark);
-}
 /* paragraf  */
 .paragraf-portfolio-a {
   font-size: 16px;
